turbopack/crates/turbo-tasks-macros-tests/tests/value_trait/fail_missing_function_annotation.stderr
error: trait items cannot be operations
  --> tests/value_trait/fail_missing_function_annotation.rs:13:29
   |
13 |     #[turbo_tasks::function(operation)]
   |                             ^^^^^^^^^
